Bug 473497 - Discover crashes when trying to update Nvidia
Summary: Discover crashes when trying to update Nvidia
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.27.7
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-08-18 06:15 UTC by Oktober
Modified: 2023-08-21 02:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oktober 2023-08-18 06:15:53 UTC
Application: plasma-discover (5.27.7)

Qt Version: 5.15.10
Frameworks Version: 5.108.0
Operating System: Linux 6.4.9-1-default x86_64
Windowing System: X11
Distribution: openSUSE Tumbleweed
DrKonqi: 5.27.7 [KCrashBackend]

-- Information about the crash:
I was updating the package org.freedesktop.Platform.GL.nvidia-535-86-05 and it downloads then it crashes and it says Dr konqi crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Upptäck (plasma-discover), signal: Segmentation fault

[KCrash Handler]
#4  0x00007fd9f81a65cb in operation_error_cb (error=0x0, user_data=0x558a93b29dd0) at /usr/src/debug/discover-5.27.7/libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp:65
#5  0x00007fda1a412962 in ffi_call_unix64 () at ../src/x86/unix64.S:104
#6  0x00007fda1a40f2df in ffi_call_int (cif=cif@entry=0x7fd99afde6a0, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=closure@entry=0x0) at ../src/x86/ffi64.c:673
#7  0x00007fda1a411f26 in ffi_call (cif=cif@entry=0x7fd99afde6a0, fn=fn@entry=0x7fd9f81a65c0 <operation_error_cb(_FlatpakTransaction*, _FlatpakTransactionOperation*, _GError*, int, void*)>, rvalue=rvalue@entry=0x7fd99afde600, avalue=avalue@entry=0x7fd99afde5a0) at ../src/x86/ffi64.c:710
#8  0x00007fda1a98b39d in g_cclosure_marshal_generic_va (closure=<optimized out>, return_value=<optimized out>, instance=<optimized out>, args_list=<optimized out>, marshal_data=<optimized out>, n_params=<optimized out>, param_types=<optimized out>) at ../gobject/gclosure.c:1650
#9  0x00007fda1a98a641 in _g_closure_invoke_va (closure=0x558a92e870f0, return_value=0x7fd99afde860, instance=0x558a94a49e30, args=0x7fd99afde910, n_params=3, param_types=0x7fd9d402f070) at ../gobject/gclosure.c:895
#10 0x00007fda1a9a4456 in g_signal_emit_valist (instance=0x558a94a49e30, signal_id=37, detail=0, var_args=var_args@entry=0x7fd99afde910) at ../gobject/gsignal.c:3472
#11 0x00007fda1a9a49df in g_signal_emit (instance=instance@entry=0x558a94a49e30, signal_id=<optimized out>, detail=detail@entry=0) at ../gobject/gsignal.c:3622
#12 0x00007fd9f811f963 in flatpak_transaction_real_run (self=<optimized out>, cancellable=0x558a93e7e960, error=0x7fd99afdeba8) at common/flatpak-transaction.c:5197
#13 0x00007fd9f81a84c6 in FlatpakTransactionThread::run (this=0x558a93b29dd0) at /usr/src/debug/discover-5.27.7/libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp:186
#14 0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#15 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#16 QThreadPrivate::start (arg=0x558a93b29dd0) at thread/qthread_unix.cpp:310
#17 0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#18 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 12 (Thread 0x7fd9da3fe6c0 (LWP 4435) "QNetworkAccessM"):
#1  0x00007fda1a516d3e in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fda1bd464be in QEventDispatcherGlib::processEvents (this=0x7fd9c801bfa0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007fda1bcebffb in QEventLoop::exec (this=this@entry=0x7fd9da3fdc00, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#5  0x00007fda1bb02dce in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#7  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#8  QThreadPrivate::start (arg=0x558a92c4d620) at thread/qthread_unix.cpp:310
#9  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#10 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 11 (Thread 0x7fd9b50fa6c0 (LWP 4432) "QNetworkAccessM"):
#1  0x00007fda1a5161e1 in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516c73 in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#4  0x00007fda1bd464be in QEventDispatcherGlib::processEvents (this=0x7fd9a0000d40, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007fda1bcebffb in QEventLoop::exec (this=this@entry=0x7fd9b50f9c00, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#6  0x00007fda1bb02dce in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#7  0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#9  QThreadPrivate::start (arg=0x558a94d17f10) at thread/qthread_unix.cpp:310
#10 0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#11 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 10 (Thread 0x7fd9b7fff6c0 (LWP 4346) "CPMMListener"):
#1  0x00007fda0e6f8d5a in ?? () from /lib64/libnvidia-glcore.so.535.86.05
#2  0x00007fda0e72a9b5 in ?? () from /lib64/libnvidia-glcore.so.535.86.05
#3  0x00007fda0e72b2aa in ?? () from /lib64/libnvidia-glcore.so.535.86.05
#4  0x00007fda0e713a24 in ?? () from /lib64/libnvidia-glcore.so.535.86.05
#5  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#6  0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 9 (Thread 0x7fd9c4ffc6c0 (LWP 4345) "QSGRenderThread"):
#1  0x00007fda1b28f290 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007fda1bb0987b in QWaitConditionPrivate::wait (deadline=..., this=0x558a95579d50) at thread/qwaitcondition_unix.cpp:146
#3  QWaitCondition::wait (this=this@entry=0x558a95579cc8, mutex=mutex@entry=0x558a95579cc0, deadline=...) at thread/qwaitcondition_unix.cpp:225
#4  0x00007fda1d237414 in QSGRenderThreadEventQueue::takeEvent (wait=true, this=0x558a95579cb8) at /usr/src/debug/qtdeclarative-everywhere-src-5.15.10+kde26/src/quick/scenegraph/qsgthreadedrenderloop.cpp:257
#5  QSGRenderThread::processEventsAndWaitForMore (this=this@entry=0x558a95579c20) at /usr/src/debug/qtdeclarative-everywhere-src-5.15.10+kde26/src/quick/scenegraph/qsgthreadedrenderloop.cpp:935
#6  0x00007fda1d239821 in QSGRenderThread::run (this=0x558a95579c20) at /usr/src/debug/qtdeclarative-everywhere-src-5.15.10+kde26/src/quick/scenegraph/qsgthreadedrenderloop.cpp:1052
#7  0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#9  QThreadPrivate::start (arg=0x558a95579c20) at thread/qthread_unix.cpp:310
#10 0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#11 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 8 (Thread 0x7fd9dabff6c0 (LWP 4318) "dconf worker"):
#1  0x00007fda1a56aa47 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516814 in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x00007fda1a516ce8 in ?? () from /lib64/libglib-2.0.so.0
#4  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007fd9f074e97d in dconf_gdbus_worker_thread (user_data=0x558a925485f0) at ../gdbus/dconf-gdbus-thread.c:82
#6  0x00007fda1a542f2e in ?? () from /lib64/libglib-2.0.so.0
#7  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#8  0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 7 (Thread 0x7fd9f178a6c0 (LWP 4316) "gdbus"):
#1  0x00007fda1b30a0c3 in poll () from /lib64/libc.so.6
#2  0x00007fda1a516d3e in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007fda1a51707f in g_main_loop_run () from /lib64/libglib-2.0.so.0
#4  0x00007fda1a1378c6 in gdbus_shared_thread_func (user_data=0x558a92522030) at ../gio/gdbusprivate.c:284
#5  0x00007fda1a542f2e in ?? () from /lib64/libglib-2.0.so.0
#6  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#7  0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 6 (Thread 0x7fd9f1fac6c0 (LWP 4315) "gmain"):
#1  0x00007fda1a56aa47 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516814 in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x00007fda1a516ce8 in ?? () from /lib64/libglib-2.0.so.0
#4  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007fda1a516ea1 in ?? () from /lib64/libglib-2.0.so.0
#6  0x00007fda1a542f2e in ?? () from /lib64/libglib-2.0.so.0
#7  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#8  0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 5 (Thread 0x7fd9f27ad6c0 (LWP 4314) "pool-spawner"):
#1  0x00007fda1a5703f0 in g_cond_wait () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a4e0feb in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007fda1a543572 in ?? () from /lib64/libglib-2.0.so.0
#4  0x00007fda1a542f2e in ?? () from /lib64/libglib-2.0.so.0
#5  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#6  0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 4 (Thread 0x7fd9f30626c0 (LWP 4313) "Qt bearer threa"):
#1  0x00007fda1a516d3e in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fda1bd464be in QEventDispatcherGlib::processEvents (this=0x7fd9e4000b70, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007fda1bcebffb in QEventLoop::exec (this=this@entry=0x7fd9f3061c00, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#5  0x00007fda1bb02dce in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#7  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#8  QThreadPrivate::start (arg=0x558a924fe7d0) at thread/qthread_unix.cpp:310
#9  0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#10 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 3 (Thread 0x7fd9f8dff6c0 (LWP 4311) "QQmlThread"):
#1  0x00007fda1a56aa47 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516814 in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x00007fda1a516ce8 in ?? () from /lib64/libglib-2.0.so.0
#4  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007fda1bd464be in QEventDispatcherGlib::processEvents (this=0x7fd9f4000b70, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007fda1bcebffb in QEventLoop::exec (this=this@entry=0x7fd9f8dfebe0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#7  0x00007fda1bb02dce in QThread::exec (this=this@entry=0x558a924389a0) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#8  0x00007fda1cb42665 in QQmlThreadPrivate::run (this=0x558a924389a0) at /usr/src/debug/qtdeclarative-everywhere-src-5.15.10+kde26/src/qml/qml/ftw/qqmlthread.cpp:155
#9  0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#10 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#11 QThreadPrivate::start (arg=0x558a924389a0) at thread/qthread_unix.cpp:310
#12 0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#13 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 2 (Thread 0x7fda16a2a6c0 (LWP 4309) "QDBusConnection"):
#1  0x00007fda1a516d3e in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fda1bd464be in QEventDispatcherGlib::processEvents (this=0x7fda10000b70, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007fda1bcebffb in QEventLoop::exec (this=this@entry=0x7fda16a29bd0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#5  0x00007fda1bb02dce in QThread::exec (this=this@entry=0x7fda1ce28060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007fda1cdaf517 in QDBusConnectionManager::run (this=0x7fda1ce28060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#7  0x00007fda1bb03ffd in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#9  QThreadPrivate::start (arg=0x7fda1ce28060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:310
#10 0x00007fda1b28ffa4 in start_thread () from /lib64/libc.so.6
#11 0x00007fda1b3187fc in clone3 () from /lib64/libc.so.6

Thread 1 (Thread 0x7fda18ea4980 (LWP 4307) "plasma-discover"):
#1  0x00007fda1bb05ffb in QtLinuxFutex::_q_futex (val3=0, addr2=0x0, val2=0, val=<optimized out>, op=0, addr=<optimized out>) at thread/qfutex_p.h:114
#2  QtLinuxFutex::futexWait<QBasicAtomicInteger<unsigned int> > (expectedValue=<optimized out>, futex=...) at thread/qfutex_p.h:133
#3  futexSemaphoreTryAcquire_loop<false> (timeout=-1, nn=8589934593, curValue=<optimized out>, u=...) at thread/qsemaphore.cpp:219
#4  futexSemaphoreTryAcquire<false> (timeout=-1, n=n@entry=1, u=...) at thread/qsemaphore.cpp:262
#5  QSemaphore::acquire (this=this@entry=0x7ffef2c01890, n=n@entry=1) at thread/qsemaphore.cpp:326
#6  0x00007fda1bd25911 in doActivate<false> (sender=0x558a92836b70, signal_index=0, argv=0x7ffef2c01910) at kernel/qobject.cpp:3906
#7  0x00007fda1bd1e47f in QMetaObject::activate (sender=sender@entry=0x558a92836b70, m=m@entry=0x7fda1bfbe840, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffef2c01910) at kernel/qobject.cpp:3985
#8  0x00007fda1bd1e52f in QObject::destroyed (this=this@entry=0x558a92836b70, _t1=<optimized out>, _t1@entry=0x558a92836b70) at .moc/moc_qobject.cpp:219
#9  0x00007fda1bd23428 in QObject::~QObject (this=this@entry=0x558a92836b70, __in_chrg=<optimized out>) at kernel/qobject.cpp:1010
#10 0x00007fda1cdcd173 in QDBusAbstractInterfaceBase::~QDBusAbstractInterfaceBase (this=this@entry=0x558a92836b70, __in_chrg=<optimized out>) at /usr/src/debug/qtbase-everywhere-src-5.15.10+kde129/src/dbus/qdbusabstractinterface.h:68
#11 0x00007fd9f0222653 in OrgKdeKwinVirtualKeyboardInterface::~OrgKdeKwinVirtualKeyboardInterface (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kirigami2-5.108.0/build/src/libkirigami/virtualkeyboard_interface.cpp:38
#12 OrgKdeKwinVirtualKeyboardInterface::~OrgKdeKwinVirtualKeyboardInterface (this=<optimized out>, this=<optimized out>) at /usr/src/debug/kirigami2-5.108.0/build/src/libkirigami/virtualkeyboard_interface.cpp:38
#13 0x00007fda1bd16ebe in QObjectPrivate::deleteChildren (this=this@entry=0x558a92836ae0) at kernel/qobject.cpp:2137
#14 0x00007fda1bd231b4 in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at kernel/qobject.cpp:1115
#15 0x00007fd9f0225619 in Kirigami::(anonymous namespace)::Q_QGS_virtualKeyboardWatcherSelf::innerFunction()::Holder::~Holder() () at /usr/src/debug/kirigami2-5.108.0/src/libkirigami/virtualkeyboardwatcher.cpp:20
#16 0x00007fda1b241b66 in __run_exit_handlers () from /lib64/libc.so.6
#17 0x00007fda1b241cb0 in exit () from /lib64/libc.so.6
#18 0x00007fda16aebc94 in QXcbConnection::processXcbEvents (this=0x558a91d982f0, flags=...) at qxcbconnection.cpp:1047
#19 0x00007fda16b1b1a3 in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:103
#20 0x00007fda1a5169b8 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#21 0x00007fda1a516dc8 in ?? () from /lib64/libglib-2.0.so.0
#22 0x00007fda1a516e5c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#23 0x00007fda1bd464a6 in QEventDispatcherGlib::processEvents (this=0x558a91e56360, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#24 0x00007fda1bcebffb in QEventLoop::exec (this=this@entry=0x7ffef2c01d90, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#25 0x00007fda1bcf4490 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#26 0x0000558a910d92a0 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/discover-5.27.7/discover/main.cpp:224
[Inferior 1 (process 4307) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-08-20 17:04:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/606
Comment 2 Joshua Goins 2023-08-21 02:42:16 UTC
Git commit 942e75bc745f309d8d70bf9de2a913a011694fde by Joshua Goins.
Committed on 20/08/2023 at 19:03.
Pushed by redstrate into branch 'master'.

flatpak: Check if error is null before trying to log a message

Apparently this callback can return a nullable error, but it's not
listed in the docs.

M  +3    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp

https://invent.kde.org/plasma/discover/-/commit/942e75bc745f309d8d70bf9de2a913a011694fde
Comment 3 Joshua Goins 2023-08-21 02:43:04 UTC
Git commit 58060d0b0b391a4d69cc3d825307e19e3cf168e9 by Joshua Goins.
Committed on 21/08/2023 at 04:42.
Pushed by redstrate into branch 'Plasma/5.27'.

flatpak: Check if error is null before trying to log a message

Apparently this callback can return a nullable error, but it's not
listed in the docs.
(cherry picked from commit 942e75bc745f309d8d70bf9de2a913a011694fde)

M  +3    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp

https://invent.kde.org/plasma/discover/-/commit/58060d0b0b391a4d69cc3d825307e19e3cf168e9