flatpak: Check if error is null before trying to log a message

Apparently this callback can return a nullable error, but it's not
listed in the docs.

BUG: 473497